Correctly detects visible screen

--- a/website/scss/presentation.scss
+++ b/website/scss/presentation.scss
@@ -1,86 +1,90 @@
-
 @import "mixins";
 
 body {
-  &.story-mode {
-    background: url("../images/bg-gradient.png") 0 0 repeat-x;
-    background-attachment: fixed;
-  }
+    &.story-mode {
+        background: url("../images/bg-gradient.png") 0 0 repeat-x;
+        background-attachment: fixed;
+    }
+}
+
+.screen {
+    padding-bottom: 10px;
 }
 
 .scales {
-  background: url("../images/scales.png") 0 0 no-repeat;
-  background-size: cover;
-  z-index: 1;
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
+    background: url("../images/scales.png") 0 0 no-repeat;
+    background-size: cover;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0.1;
 }
 
 .stage {
-  width: 1367px; // 1920
-  height: 768px; // 1200
-  background: url("../images/meow.jpg") 0 0 no-repeat;
-  margin: 0 auto 20px auto;
-  background-size: cover;
+    width: 1367px; // 1920
+    height: 768px; // 1200
+    background: url("../images/meow.jpg") 0 0 no-repeat;
+    margin: 0 auto 20px auto;
+    background-size: cover;
 }
 
-#days, #users {
-  z-index: 2;
-  position: fixed;
-  left: 20px;
-  top: 50%;
-  margin-top: -80px;
-  width: 80px;
-  height: 80px;
-  border: 1px solid #ccc;
-  background-color: whitesmoke;
-  text-align:  center;
+.counter {
+    z-index: 2;
+    position: fixed;
+    left: 20px;
+    top: 50%;
+    margin-top: -80px;
+    width: 80px;
+    height: 80px;
+    border: 1px solid #ccc;
+    background-color: whitesmoke;
+    text-align: center;
 }
 
-#users {
-  left: auto;
-  right: 20px;
+#counter-right {
+    left: auto;
+    right: 20px;
 }
 
-#controls {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 60px;
-  border-top: 1px solid #cccccc;
-  z-index: 900;
-  background-color: #ffffff;
+#chapters {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    border-top: 1px solid #cccccc;
+    z-index: 900;
+    background-color: #ffffff;
 }
 
 .stage {
-  position: relative;
+    position: relative;
 }
 
 h1 {
-  margin: 0;
-  padding: 20px;
+    margin: 0;
+    padding: 20px;
 }
 
 .trigger-1 {
-  position: absolute;
-  right: 20px;
-  top: 20px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
 }
 
 .action-1 {
-  display: none;
-  width: 400px;
-  height: 320px;
-  margin: 20px;
-  background-color: #ffffff;
-  padding: 20px;
-  text-align: left;
+    display: none;
+    width: 400px;
+    height: 320px;
+    margin: 20px;
+    background-color: #ffffff;
+    padding: 20px;
+    text-align: left;
 }
 
 .action-1.active {
-  display: block;
+    display: block;
 }
